# ai-cup

./: .gitignore  README.md  baseline.py  fft.py  main.py  palapapa.py  plot_data.py  pyproject.toml  report.tex  type_aliases.py  visualization.py
