[project]
name = "ai-cup"
version = "0.1.0"
description = "AI Cup"
requires-python = ">= 3.13"
readme = "README.md"
dependencies = [
    "matplotlib >= 3.10.3",
    "numpy >= 2.2.5",
    "pandas >= 2.2.3",
    "scikit-learn>=1.6.1",
    "scipy >= 1.15.3",
    "scipy-stubs>=1.15.3.0",
    "tqdm>=4.67.1",
]

[tool.pyright]
typeCheckingMode = "strict"
diagnosticMode = "workspace"
reportCallInDefaultInitializer = "warning"
reportImplicitOverride = "warning"
reportImplicitStringConcatenation = "warning"
reportImportCycles = "warning"
reportMissingSuperCall = "warning"
reportPropertyTypeMismatch = "warning"
reportShadowedImports = "warning"
reportUninitializedInstanceVariable = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"
